# threema-desktop

./: .editorconfig  .eslintignore  .eslintrc.cjs  .git-pre-commit.sh  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .npmrc  .nycrc.yml  .prettierignore  .prettierrc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3RD-PARTY.txt  README.md  RELEASING.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json
.devcontainer/: .env  Dockerfile  devcontainer.json  env.sh
.licenses/: README.md  twemoji
config/: base.js  build.ts  i18next-parser.config.js  karma.cjs  svelte.config.js  tsconfig.json  vite.config.ts
docs/: README.md  app-initialization.pu  architecture.md  book.toml  model-store-lifecycle.pu  plantuml-build.sh  protocol-layers.pu
packaging/: .gitignore  generate-checksums.ps1  generate-checksums.sh  generate-source-dist.sh  main.ts  package.json  sign-windows-zip.ps1  tsconfig.json
src/: index.html  service-worker-electron.ts  service-worker-tsconfig.json  service-worker-web.ts  tsconfig.base.json
src/launcher/: Cargo.toml  README.md  rust-toolchain.toml
src/launcher/.cargo/: config.toml
src/launcher/src/: main.rs
src/launcher/src/update/: common.rs  macos.rs  mod.rs  windows.rs
src/launcher/src/util/: constants.rs  fs.rs  logging.rs  mod.rs  paths.rs
tools/: assert.ts  build-electron.cjs  convert-screenshot-data.py  dev-electron.sh  dist-electron.cjs  gather-licenses.sh  generate-icons-flatpak.sh  generate-icons-macos.sh  generate-icons-web.sh  generate-icons-windows.sh  generate-protobuf-postprocess.cjs  generate-protobuf.sh  generate-safe-enums.cjs  generate-structbuf.sh  generator-utils.cjs  rename.cjs  run-tests.cjs  (+4 more)
(+1648 files in other folders)
