[package]
name = "threema-desktop-launcher"
version = "1.0.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
edition = "2021"
homepage = "https://threema.ch/"
keywords = ["threema", "desktop", "launcher"]
publish = false

[dependencies]
home = "0.5.5"
time = "0.3.30"

[profile.release]
overflow-checks = true
lto = true
strip = "debuginfo"
