[package]
name = "threema-desktop-launcher"
version = "1.0.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
edition = "2021"
homepage = "https://threema.ch/"
keywords = ["threema", "desktop", "launcher"]
publish = false

[dependencies]
colored = "2.0.4"
home = "0.5.5"
sha2 = "0.10.8"
time = "0.3.30"

[dependencies.windows]
package = "windows"
version = "0.58.0"
features = [
  "ApplicationModel",
  "Management_Deployment",
  "Storage",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Recovery",
]

[[bin]]
name = "ThreemaDesktopLauncher"
path = "src/main.rs"

[profile.release]
overflow-checks = true
lto = true
strip = "debuginfo"

[features]
default = []
allow_path_override = []
